# OS-BSU-2025

./: LICENSE  README.md
homework(1)/: README.md
homework(1)/linux/: CMakeLists.txt  README.md
homework(1)/linux/main/: CMakeLists.txt  main.cpp
homework(1)/linux/numberLIB/: CMakeLists.txt  number.cpp  number.h
homework(1)/linux/vectorLIB/: CMakeLists.txt  vector.cpp  vector.h
homework(1)/windows/: README.md  windows.sln
homework(1)/windows/Main/: Main.cpp  Main.vcxproj
homework(1)/windows/numberLIB/: number.cpp  number.h  numberLIB.vcxproj
homework(1)/windows/vectorLIB/: vector.cpp  vector.h  vectorLIB.vcxproj
homework(2)/: README.md
homework(2)/linux/: README.md  main.cpp  matrix.cpp  matrix.h
homework(2)/multiplatform/: CMakeLists.txt  README.md  matrix.cpp
homework(2)/windows/: README.md  matrix.sln
homework(2)/windows/matrix/: main.cpp  matrix.cpp  matrix.h  matrix.vcxproj  matrix.vcxproj.filters
homework(3)/: README.md  buffered_channel.h  main.cpp
homework(4)/: README.md
homework(4)/linux/: README.md  dummy.cpp  killer.cpp  user.cpp
homework(4)/windows/: README.md  dummy.cpp  killer.cpp  user.cpp
